Fixed some spacing & add alt & add aria-label menus

--- a/app/assets/stylesheets/rmll/specific/_terminal.scss
+++ b/app/assets/stylesheets/rmll/specific/_terminal.scss
@@ -37,6 +37,10 @@
     white-space: pre;
   }
 
+  .ps1:not(:first-of-type) {
+    margin-top: 2rem;
+  }
+
   .tree {
     padding: 1rem;
 
